# 163-cg-auto-hoyo-games

./: .gitignore  main.py  main_corn.py  main_cron.py  main_old.py  pyproject.toml
core/: browser.py  brswer.py  cg_163.py  config.py  debug.py  game_map.py  img_cv.py  log.py  main.py  ocr.py  push.py  retry.py  test.py  types.py  utils.py
core/game/hsr/: main.py
core/game/zzz/: auto_attack.py  main.py  zzz_utils.py
