[project]
name = "auto-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "anyio>=4.12.0",
    "loguru>=0.7.3",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.11.0.86",
    "playwright>=1.57.0",
    "pydantic>=2.12.5",
    "rapidocr>=3.4.5",
    "schedule",
]
