[project]
name = "auto-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp",
    "anyio",
    "loguru",
    "onnxruntime",
    "opencv-python",
    "playwright",
    "pydantic",
    "rapidocr",
    "schedule",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
]
